syntax = "proto3";

option java_package = "grpc";

service UserController{
  rpc addUser(UserDTO) returns (UserObjDTO);
  rpc addFollowing(PostFollowingRequest) returns (PostFollowingResponse);
  rpc getFollowings(GetUserRequest)returns (UsersDTO);
  rpc getUser(GetUserRequest)returns (UserObjDTO);
  rpc getUsersByPopularity(GetPopularityUserRequest)returns (UsersDTO);
  rpc getByUserAndPasswordRequest (GetByUserIdAndPasswordRequest) returns (UserObjDTO);
  rpc addFavorite(PostFavoriteRequest) returns (PostFavoriteResponse);
  rpc deleteFavorite(PostFavoriteRequest) returns (PostFavoriteResponse);
  rpc deleteFollowing(PostFollowingRequest) returns (PostFollowingResponse);
}

message UserDTO{
  int32 idUser = 1;
  string name = 2;
  string last_name = 3;
  string dni = 4;
  string email = 5;
  string username = 6;
  string password = 7;
  repeated FollowingDTO following = 8;
  int32 popularity = 9;
  string role = 10;
}

message FollowingDTO{
  int32 idUser = 1;
  string name = 2;
  string last_name = 3;
  string username = 4;
}


message GetUserRequest{
  int32 idUser=1;
}

message GetPopularityUserRequest{
  int32 pageSize=1;
  int32 pageNumber=2;
}

message PostFollowingRequest{
  int32 idUser=1;
  int32 idFollowing=2;
}

message PostFavoriteRequest{
  int32 idUser=1;
  int32 idrecipe=2;
}

message PostFollowingResponse{
  int32 idUser=1;
  int32 idFollowing=2;
  UserServerResponse serverResponse = 3;
}

message PostFavoriteResponse{
  int32 idUser=1;
  int32 idrecipe=2;
  UserServerResponse serverResponse = 3;
}

message UserServerResponse{
  int32 code = 1;
  string msg = 2;
}

message GetByUserIdAndPasswordRequest{
  string user = 1;
  string password = 2;
}

message UsersDTO{
  repeated UserDTO users=1;
  UserServerResponse serverResponse = 2;
}

message UserObjDTO{
  UserDTO user = 1;
  UserServerResponse serverResponse = 2;
}
