syntax = "proto3";

option java_package = "grpc";

import "Protos/Step.proto";

service RecipeController{
  rpc addRecipe(RecipeDTO) returns (RecipeObjDTO);
  rpc updateRecipe(RecipeDTO) returns (RecipeObjDTO);
  rpc getRecipe(GetRecipeRequest)returns (RecipeObjDTO);
  rpc getAllRecipes(Empty) returns (RecipesDTO);
  rpc getRecipesByUserId(IdUserRequest) returns (RecipesDTO);
  rpc getByFilter(GetByFilterRequest) returns (RecipesDTO);
}

message Empty {
}

message RecipeServerResponse{
  int32 code = 1;
  string msg = 2;
}

message RecipesDTO{
  repeated RecipeDTO recipes=1;
  RecipeServerResponse serverResponse = 2;
}

message RecipeDTO{
  int32 idRecipe = 1;
  int32 idUser = 2;
  string title = 3;
  string description = 4;
  string ingredients = 5;
  int32 idCategory = 6;
  int32 preparationTime = 7;
  repeated StepDTO steps = 8;
  repeated RecipeImageDTO images = 9;
}

message RecipeObjDTO{
  RecipeDTO recipe = 1;
  RecipeServerResponse serverResponse = 2;
}

message ListRecipeDTO{
  repeated RecipeDTO recipes = 1;
  RecipeServerResponse serverResponse = 2;
}

message GetRecipeRequest{
  int32 idRecipe=1;
}

message IdUserRequest{
  int32 idUser = 1;
}

message GetByFilterRequest{
  int32 idCategory=1;
  string title=2;
  string ingredients=3;
  int32 timeSince=4;
  int32 timeUntil=5;
}

message RecipeImageDTO {
  int32 idImage = 1;
  string name = 2;
  string file = 3;
}